# VoiceDNA

./: .gitignore  .pr-review.md  .task.md  AGENTS.md  CHANGELOG.md  DEPLOY_NOTES.md  DESIGN_DOC.md  EVOLUTION.md  FINAL_TEST_LOG.txt  HANDOFF.md  IMPLEMENTATION_NOTE.md  INTEGRATION_NOTE.md  LICENSE  LINT_LOG.txt  MIGRATION_v2_0_1.md  PR_BODY.md  PR_CHECKLIST.md  PR_DESCRIPTION.md  PR_DRAFT.md  PR_MERGE_CHECKLIST.md  PR_OPENCLAW_VOICES.md  PR_READY_REPORT.md  PR_description.txt  PR_ready.md  README.md  README_DELIVERABLES.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SKILL_GIT_WORKFLOW.md  SUBAGENT_COMPLETION_REPORT.md  TEST_LOG.txt  TEST_LOGS.txt  UAMF_v4_schema.json  VERIFICATION_REPORT.md  approval_request.txt  cli.py  conftest.py  integration-preflight.md  local_test_report.txt  missing_items.txt  (+8 more)
.github/: dependabot.yml
.github/workflows/: auto-label-feedback.yml  ci.yml  feedback-helper.yml
announcements/: openclaw_issue.md  reddit_post.md  x_post.md
demo/: README.md  validation_log_20260418.txt
docs/features/: TEMPLATE.md
docs/fixes/: TEMPLATE.md
examples/: basic_usage.py  cartesia_demo.py  create_from_audio.py  demo.py  elevenlabs_demo.py  encrypted_plugin_demo.py  openclaw_hook.py  openclaw_skill.py  openclaw_voicedemo.py  record_and_birth.sh  voicebox_demo.py
examples/omarchy/: README.md  install-voicedna-omarchy.sh  speech-dispatcher-voicedna.conf  test-voicedna.sh  voicedna-os-daemon.py  voicedna-os-daemon.service  voicedna-pipewire-filter.py
examples/openclaw/: README.md  voicedna_tts_hook.py  voipms_phone_skill.py
pr_prep/: PR_BODY.md  PR_CHECKLIST.md  Push_Readiness.md  QA_checklist.md  pr_description_summary.md  release_notes.md
release/: PR_DRAFT.md  answers.md  patch_notes.md  push_plan.txt  push_voicedna_pr.sh  release_notes_template.md  test-results.txt  verification_report.txt  voicedna_openclaw_per_agent_voices.bundle  voicedna_preflight.md
release_prep/: push_instructions.txt  voicedna-20260417T1720EDT.bundle  voicedna-20260417T1720EDT.patch
reports/: local_test_report.txt
research/: .env.example  CI_PERMISSIONS_REPORT.md  DESIGN_DOC.md  DESIGN_DOC_voice_integration.md  Handoff.md  IMPLEMENTATION_CHECKLIST.md  PR_CHECKLIST.md  PR_checklist.md  PUSH_OPTIONS.md  RESEARCH_VALIDATION.txt  TEST_SUMMARY.txt  VoiceDNA_integration_prep.md  ci_and_push_notes.md  demo_commands.sh  final_integration_checklist.md  implementation_checklist.md  implementation_note.md  integration-prep.md  integration_checklist.md  integration_packet.md  integration_plan.md  integration_preflight.md  integration_tasks.md  merge_ready_report.md  openclaw_integration_plan.md  openclaw_integration_prep.md  openclaw_voice_implementation_checklist.md  openclaw_voice_integration_plan.md  pr_description.md  preflight_report.txt  prep_for_voss.md  research_summary.md  smoke_test_tts.sh  summary_for_pr.md  test_tts.sh  voice_license_report.md  voicedna_integration_design.md  voicedna_integration_summary.md  voicedna_openclaw_integration_checklist.md  voicedna_openclaw_integration_plan.md  (+1 more)
research/integration-packet/: DESIGN_DOC.md  blockers.txt  implementation_checklist.md  local_run_commands.txt
research/logs/: demo_voicedemo_20260418.txt  demo_voicedemo_validation_20260418.txt  test_full_suite_20260418.txt  test_voice_adapter_20260418.txt
research/prep_for_voss/: checklist.md
scripts/: clear-vram.sh  review_feedback.py  setup-piper-natural.sh
spec/: VoiceDNA_Spec_v1.0.md
tests/: conftest.py  test_audio_roundtrip.py  test_child_inheritance.py  test_consistency_engine.py  test_natural_backend_lowvram.py  test_natural_doctor.py  test_openclaw_live_voice.py  test_openclaw_tts_post.py  test_piper_quality.py  test_processor_report.py  test_voice_adapter.py
voicedna/: __init__.py  consistency.py  framework.py  openclaw_adapter.py  openclaw_live_voice.py  openclaw_tts_post.py  synthesis.py  voice_dna.py
voicedna/filters/: __init__.py  age_maturation.py  audio_helpers.py  imprint_converter.py
voicedna/plugins/: __init__.py  base.py  builtin.py  manager.py
voicedna/providers/: __init__.py  personaplex.py  piper.py
vst3/: README.md  VoiceDNAProcessor.h  bridge_runtime.py  python_bridge.py  venom_bridge.py
vst3/juce_venom_starter/: CMakeLists.txt  VoiceDNAVST3.jucer
vst3/juce_venom_starter/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  VoiceDNABridge.cpp  VoiceDNABridge.h
