[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voicedna"
version = "2.9.9"
description = "Lifelong sonic identity and plugin framework for AI voices"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Luke Morrison + Grok", email = "lukejmorrison@gmail.com" }
]
dependencies = [
  "cryptography>=43.0.0",
  "numpy>=2.0.0",
  "pydub>=0.25.1",
  "audioop-lts>=0.2.1; python_version >= '3.13'",
  "sounddevice>=0.4.7",
  "typer>=0.12.3",
  "requests>=2.32.0",
]
keywords = ["ai-voice", "tts", "voice-fingerprint", "uamf", "elevenlabs"]

[project.urls]
Homepage = "https://github.com/lukejmorrison/VoiceDNA"
Repository = "https://github.com/lukejmorrison/VoiceDNA.git"

[tool.setuptools]
packages = ["voicedna", "voicedna.plugins", "voicedna.filters", "voicedna.providers"]
py-modules = ["voice_dna", "cli"]

[project.scripts]
voicedna = "cli:app"

[project.optional-dependencies]
personaplex = [
  "transformers>=4.47.0,<5",
  "accelerate>=1.0.0",
  "torch>=2.4.0",
]
personaplex-lowvram = [
  "transformers>=4.47.0,<5",
  "accelerate>=1.0.0",
  "torch>=2.4.0",
  "bitsandbytes>=0.43.0",
]
consistency = [
  "speechbrain>=1.0.0",
  "resemblyzer>=0.1.4",
]
rvc = [
  "rvc-python>=0.1.5; python_version < '3.13'",
]
dev = [
  "pytest>=8.2.0",
  "build>=1.2.1",
  "twine>=5.1.1",
]

[project.entry-points."voicedna.plugins"]
prompt_tag = "voicedna.plugins.builtin:PromptTagFilter"
base64_passthrough = "voicedna.plugins.builtin:Base64PassThroughFilter"

[project.entry-points."voicedna.filters"]
prompt_tag = "voicedna.plugins.builtin:PromptTagFilter"
base64_passthrough = "voicedna.plugins.builtin:Base64PassThroughFilter"
age_maturation = "voicedna.filters.age_maturation:AgeMaturationFilter"
imprint_converter = "voicedna.filters.imprint_converter:ImprintConverterFilter"

[tool.pytest.ini_options]
testpaths = ["tests"]
